--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="./style/normalize.css">
   <link rel="stylesheet" href="./style/style.css">
-  <script defer src="js/tables.js"></script>
-  <script defer src="js/chairs.js"></script>
-  <script defer src="js/theme.js"></script>
-  <script defer src="js/dayInfo.js"></script>
-  <script defer src="js/index.js"></script>
-  <script defer src="js/buttonUp.js"></script>
-  <script defer src="js/form.js"></script>
+  <script defer src="scripts/tables.js"></script>
+  <script defer src="scripts/chairs.js"></script>
+  <script defer src="scripts/sofas.js"></script>
+  <script defer src="scripts/beds.js"></script>
+  <script defer src="scripts/theme.js"></script>
+  <script defer src="scripts/dayInfo.js"></script>
+  <script defer src="scripts/index.js"></script>
+  <script defer src="scripts/buttonUp.js"></script>
+  <script defer src="scripts/form.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -25,11 +28,15 @@
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="#section-tables">Столы</a></li>
           <li class="nav__item"><a class="nav__link" href="#section-chairs">Стулья</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">Диваны</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">Кровати</a></li>
+          <li class="nav__item"><a class="nav__link" href="#section-sofas">Диваны</a></li>
+          <li class="nav__item"><a class="nav__link" href="#section-beds">Кровати</a></li>
         </ul>
       </nav>
-      <button class="btn-theme">Тема</button>
+      <a class="theme-toggle" href="#">
+        <span class="theme-icon"></span>
+        <!-- <span class="theme-icon-light"></span>
+        <span class="theme-icon-dark"></span> -->
+      </a>
     </div>
   </header>
   
@@ -55,14 +62,18 @@
         </ul>
       </div>
     </section>
-    <section class="section">
+    <section id="section-sofas" class="section">
       <div class="container">
-
+        <h2 class="title">Диваны</h2>
+        <ul id="sofas" class="furniture__list">
+        </ul>
       </div>
     </section>
-    <section class="section">
+    <section id="section-beds" class="section">
       <div class="container">
-
+        <h2 class="title">Кровати</h2>
+        <ul id="beds" class="furniture__list">
+        </ul>
       </div>
     </section>
   </main>
